<package>
  <name>rviz_fixed_view_controller</name>
  <version>0.0.1</version>
  <description>A simple rviz view controller that follows a TF frame.</description>
  <author email="adamleeper@gmail.com">Adam Leeper</author>
  <maintainer email="adamleeper@gmail.com">Adam Leeper</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/rviz_fixed_view_controller</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>rviz</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
